# Cosmica-dev

./: .gitignore  README.md  SimTimePlot_speedup.ipynb  environment.yml
Cosmica_1D/: CreateInputFiles_FromSimulationList_AMS_gen_test.py  GeneticParam.py  Simulations_test.list
Cosmica_1D/0_OutputFiles_1D/: ParameterListALL_v12.txt
Cosmica_1D/Analisi/: LocalAnalysis.sh
Cosmica_V1-speedtest/: AllRuns_speedtest.sh  SimExeTimes_V1.txt  kernel_test.cu
Cosmica_V2-speedtest/: AllRuns_speedtest.sh  SimExeTimes_V2.txt  kernel_test.cu
Cosmica_V3-speedtest/: AllRuns_speedtest.sh  SimExeTimes_V3.txt  kernel_test.cu
Cosmica_V4-speedtest/: AllRuns_speedtest.sh  kernel_test.cu
Cosmica_V5-speedtest/: AllRuns_speedtest.sh  SimExeTimes_V5.txt  kernel_test.cu
Cosmica_V6-speedtest/: kernel_test.cu
Cosmica_V7-speedtest/: AllRuns_speedtest.sh  kernel_test.cu
Cosmica_V8-speedtest/: AllRuns_speedtest.sh  CMakeLists.txt  SimExeTimes_V6.txt  compile.sh  kernel_test.cu  oldtest.sh  run.sh  test.sh
Cosmica_V8-speedtest/headers/: DiffusionModel.cuh  EventSequence.hpp  GPUManage.cuh  GenComputation.cuh  HelModLoadConfiguration.cuh  HelModVariableStructure.cuh  HeliosphereModel.cuh  HeliosphericPropagation.cuh  HistoComputation.cuh  Histogram.cuh  IOConfiguration.cuh  LoadConfiguration.cuh  MagneticDrift.cuh  SDECoeffs.cuh  SolarWind.cuh  VariableStructure.cuh  constants.hpp  fkYAML.hpp
Cosmica_V8-speedtest/runned_tests/: convert.py
Cosmica_V8-speedtest/runned_tests/AMS-02_PRL2015/: Input_Deuteron_TKO_20110509_20131121_r00100_lat00000.txt  Input_Proton_TKO_20110509_20131121_r00100_lat00000.txt  Input_Proton_TKO_20110509_20131121_r00100_lat00000.yaml
Cosmica_V8-speedtest/runned_tests/AMS-02_PRL2015/outfile/: Proton_TKO_20110509_20131121_r00100_lat00000_matrix_1207297.yaml  R_histo.txt
Cosmica_V8-speedtest/runned_tests/AMS-02_PRL2015/run/: run_AMS-02_PRL2015_Proton_Deuteron_0.out  run_AMS-02_PRL2015_Proton_Deuteron_1.out  run_AMS-02_PRL2015_Proton_Deuteron_2.out  run_AMS-02_PRL2015_Proton_Deuteron_4.out  run_AMS-02_PRL2015_Proton_Deuteron_5.out  run_AMS-02_PRL2015_Proton_Deuteron_6.out  run_AMS-02_PRL2015_Proton_Deuteron_7.out  run_AMS-02_PRL2015_Proton_Deuteron_9.out  run_AMS-02_PRL2015_Proton_Proton_1.out  run_AMS-02_PRL2015_Proton_Proton_2.out  run_AMS-02_PRL2015_Proton_Proton_4.out  run_AMS-02_PRL2015_Proton_Proton_6.out  run_AMS-02_PRL2015_Proton_Proton_7.out  run_AMS-02_PRL2015_Proton_Proton_8.out
Cosmica_V8-speedtest/runned_tests/AMS-02_PRL2018/: Input_Beryl7_20110509_20160509_r00100_lat00000.txt  Input_Beryllium_20110509_20160509_r00100_lat00000.txt
Cosmica_V8-speedtest/runned_tests/AMS-02_PRL2018/outfile/: R_histo.txt
Cosmica_V8-speedtest/runned_tests/AMS-02_PRL2018/run/: run_AMS-02_PRL2018_Beryl10_0.out  run_AMS-02_PRL2018_Beryl10_3.out  run_AMS-02_PRL2018_Beryl10_4.out  run_AMS-02_PRL2018_Beryl10_5.out  run_AMS-02_PRL2018_Beryl10_6.out  run_AMS-02_PRL2018_Beryl10_8.out  run_AMS-02_PRL2018_Beryl10_9.out  run_AMS-02_PRL2018_Beryl7_0.out  run_AMS-02_PRL2018_Beryl7_1.out  run_AMS-02_PRL2018_Beryl7_2.out  run_AMS-02_PRL2018_Beryl7_3.out  run_AMS-02_PRL2018_Beryl7_6.out  run_AMS-02_PRL2018_Beryl7_7.out  run_AMS-02_PRL2018_Beryl7_9.out  run_AMS-02_PRL2018_Beryllium_1.out  run_AMS-02_PRL2018_Beryllium_2.out  run_AMS-02_PRL2018_Beryllium_4.out  run_AMS-02_PRL2018_Beryllium_5.out  run_AMS-02_PRL2018_Beryllium_7.out  run_AMS-02_PRL2018_Beryllium_8.out  run_AMS-02_PRL2018_Beryllium_9.out
Cosmica_V8-speedtest/runned_tests/AMS-02_PRL2021/: Input_Iro54_20110509_20191016_r00100_lat00000.txt  Input_Iro55_20110509_20191016_r00100_lat00000.txt  Input_Iro57_20110509_20191016_r00100_lat00000.txt  Input_Iro58_20110509_20191016_r00100_lat00000.txt
Cosmica_V8-speedtest/runned_tests/AMS-02_PRL2021/outfile/: R_histo.txt
Cosmica_V8-speedtest/runned_tests/AMS-02_PRL2021/run/: run_AMS-02_PRL2021_Iro54_1.out  run_AMS-02_PRL2021_Iro54_2.out  run_AMS-02_PRL2021_Iro54_3.out  run_AMS-02_PRL2021_Iro54_5.out  run_AMS-02_PRL2021_Iro54_6.out  run_AMS-02_PRL2021_Iro54_7.out  run_AMS-02_PRL2021_Iro54_8.out  run_AMS-02_PRL2021_Iro54_9.out  run_AMS-02_PRL2021_Iro55_0.out  run_AMS-02_PRL2021_Iro55_1.out  run_AMS-02_PRL2021_Iro55_2.out  run_AMS-02_PRL2021_Iro55_3.out  run_AMS-02_PRL2021_Iro55_6.out  run_AMS-02_PRL2021_Iro55_7.out  run_AMS-02_PRL2021_Iro55_8.out  run_AMS-02_PRL2021_Iro55_9.out  run_AMS-02_PRL2021_Iro57_1.out  run_AMS-02_PRL2021_Iro57_4.out  run_AMS-02_PRL2021_Iro57_5.out  run_AMS-02_PRL2021_Iro57_7.out  run_AMS-02_PRL2021_Iro57_8.out  run_AMS-02_PRL2021_Iro57_9.out  run_AMS-02_PRL2021_Iro58_0.out  run_AMS-02_PRL2021_Iro58_1.out  run_AMS-02_PRL2021_Iro58_3.out  run_AMS-02_PRL2021_Iro58_5.out  run_AMS-02_PRL2021_Iro58_7.out  run_AMS-02_PRL2021_Iro58_9.out  run_AMS-02_PRL2021_Iro60_0.out  run_AMS-02_PRL2021_Iro60_2.out  run_AMS-02_PRL2021_Iro60_3.out  run_AMS-02_PRL2021_Iro60_5.out  run_AMS-02_PRL2021_Iro60_7.out  run_AMS-02_PRL2021_Iro60_9.out  run_AMS-02_PRL2021_Iron.run  run_AMS-02_PRL2021_Iron_0.out  run_AMS-02_PRL2021_Iron_1.out  run_AMS-02_PRL2021_Iron_2.out  run_AMS-02_PRL2021_Iron_3.out  run_AMS-02_PRL2021_Iron_4.out  (+3 more)
Cosmica_V8-speedtest/runned_tests/Test/: Input_Test.txt  compile.sh  run.sh
Cosmica_V8-speedtest/scripts/: baselines.txt  launch_test.py
Cosmica_V8-speedtest/scripts/benchmarks/: launch_benchmarks.py  nk0_times.csv  plot_benchmarks.py
Cosmica_V8-speedtest/scripts/conversions/: input_converter.py  output_converter.py
Cosmica_V8-speedtest/scripts/evaluate/: files_utils.py  fitness.py  main.py  make_input.py  physics_utils.py  test.ipynb
Cosmica_V8-speedtest/sources/: DiffusionModel.cu  EventSequence.cpp  GPUManage.cu  GenComputation.cu  HelModLoadConfiguration.cu  HeliosphereLocation.cu  HeliosphereModel.cu  HeliosphericPropagation.cu  HistoComputation.cu  Histogram.cu  IOConfiguration.cu  LoadConfiguration.cu  MagneticDrift.cu  SDECoeffs.cu  SolarWind.cu
PyCosmica/: main.py  parser.py  propagation.py  sde.py  structures.py  utils.py
extra/: Spiegone.ipynb  requirements.txt
test/: make_input.py  plot.py  progressive_test.py  run.py  test_k0.py
(+989 files in other folders)
